Deployment/IaC/Development/azuredeploy-IaCTemplate - lab.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "agency": {
            "defaultValue": "sdsd",
            "type": "string",
            "metadata": {
                "description": "Agency identifier varies based on agency."
            }
        },
        "application": {
            "defaultValue": "ccw",
            "type": "string"
        },
        "blobServices_changeFeed": {
            //"defaultValue": "true",
            "type": "String",
            "allowedValues": [ "off", "true", "false" ],
            "metadata": {
                "description": "off will remove property from resource"
            }
        },
        "blobServices_container": {
            //"defaultValue": "$web",
            "type": "String"
        },
        "blobServices_containerDeleteRetentionPolicy": {
            //"defaultValue": "true",
            "type": "String",
            "allowedValues": [ "off", "true", "false" ],
            "metadata": {
                "description": "off will remove property from resource"
            }
        },
        "blobServices_containerRetention_days": {
            //"defaultValue": 1,
            "type": "int"
        },
        "blobServices_deleteRetentionPolicy": {
            //"defaultValue": true,
            "type": "bool"
        },
        "blobServices_isVersioningEnabled": {
            //"defaultValue": "true",
            "type": "String",
            "allowedValues": [ "off", "true", "false" ],
            "metadata": {
                "description": "off will remove property from resource"
            }
        },
        "blobServices_restorepolicy": {
            //"defaultValue": "true",
            "type": "String",
            "allowedValues": [ "off", "true", "false" ],
            "metadata": {
                "description": "off will remove property from resource"
            }
        },
        "blobServices_retention_days": {
            //"defaultValue": 1,
            "type": "int"
        },
        "deploy_rg": {
            //"defaultValue": true,
            "type": "bool"
        },
        "DeployNetworkResources": {
            //"defaultValue": false,
            "type": "Bool"
        },
        "environment": {
            "defaultValue": "dev",
            "type": "string",
            "allowedValues": [ "dev" ]
        },
        "fileServices_retention": {
            //"defaultValue": true,
            "type": "bool"
        },
        "fileServices_retentionDays": {
            //"defaultValue": 1,
            "type": "int"
        },
        "privateEndpoint_id": {
            "type": "String"
        },
        "region": {
            "defaultValue": "[resourceGroup().location]",
            "type": "string"
        },
        "rg_name": {
            "defaultValue": "[resourceGroup().name]",
            "type": "string"
        },
        "storageAccount": {
            //"defaultValue": "test",
            "type": "String"
        },
        // "virtualNetwork_externalid": {
        //     "defaultValue": "/subscriptions/c74e04b6-0cd7-4778-863e-34654eb49270/resourceGroups/rg-sdsd-it-ccw-dev-001/providers/Microsoft.Network/virtualNetworks/vnet-sdsd-it-ccw-dev-001",
        //     "type": "string"
        // }
        "virtualNetworks_vnet": {
            "defaultValue": "test",
            "type": "String"
        }
    },
    "variables": {
        "storageAccount_container_name": "[concat(variables('storageAccount_name'), '/default/', parameters('blobServices_container'))]",
        "storageAccount_default_name": "[concat(variables('storageAccount_name'), '/default')]",
        "storageAccount_name": "[concat(parameters('agency'), parameters('application'), parameters('environment'), if(equals(parameters('storageAccount'), 'test'), 'test', parameters('storageAccount')), 'sa')]",
        "virtualNetworks_name": "[concat(parameters('agency'),'-', parameters('application'), '-',parameters('environment'),'-', parameters('virtualNetworks_vnet'), '-vnet')]"
    },
    "resources": [
        // {
        //     "condition": "[parameters('deploy_rg')]",
        //     "type": "Microsoft.Storage/storageAccounts/privateEndpointConnections",
        //     "apiVersion": "2022-05-01",
        //     "name": "[concat(variables('storageAccount_name'), '/', variables('storageAccount_name'), parameters('privateEndpoint_id'))]", //'.1134b2af-aec1-466c-aa59-984031c7df0d', '.1ae55f77-698f-4808-bee3-36f4eaa81e62'
        //     "dependsOn": [
        //         "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount_name'))]"
        //     ],
        //     "properties": {
        //         "provisioningState": "Succeeded",
        //         "privateEndpoint": {},
        //         "privateLinkServiceConnectionState": {
        //             "status": "Approved",
        //             "description": "Auto-Approved",
        //             "actionRequired": "None"
        //         }
        //     }
        // },
        {
            "type": "Microsoft.Storage/storageAccounts/queueServices",
            "apiVersion": "2022-05-01",
            "name": "[concat(variables('storageAccount_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount_name'))]"
            ],
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/tableServices",
            "apiVersion": "2022-05-01",
            "name": "[concat(variables('storageAccount_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount_name'))]"
            ],
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "condition": "[parameters('deploy_rg')]",
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "apiVersion": "2022-05-01",
            "name": "[variables('storageAccount_container_name')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/blobServices', variables('storageAccount_name'), 'default')]",
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount_name'))]"
            ],
            "properties": {
                "immutableStorageWithVersioning": {
                    "enabled": false
                },
                "defaultEncryptionScope": "$account-encryption-key",
                "denyEncryptionScopeOverride": false,
                "publicAccess": "None"
            }
        },
        {
            "condition": "[parameters('deploy_rg')]",
            "type": "Microsoft.Storage/storageAccounts/blobServices",
            "apiVersion": "2022-05-01",
            "name": "[variables('storageAccount_default_name')]",
            "location": "[parameters('region')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount_name'))]"
            ],
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "properties": {
                "copy": [
                    {
                        "name": "changeFeed",
                        "count": "[if(equals(parameters('blobServices_changeFeed'),'off'), 0, 1)]",
                        "input": {
                            "enabled": "[if(equals(parameters('blobServices_changeFeed'),'true'), 'true', 'false')]"
                        }
                    },
                    {
                        "name": "restorePolicy",
                        "count": "[if(equals(parameters('blobServices_restorepolicy'),'off'), 0, 1)]",
                        "input": {
                            "enabled": "[if(equals(parameters('blobServices_restorePolicy'),'true'), 'true', 'false')]"
                        }
                    },
                    {
                        "name": "containerDeleteRetentionPolicy",
                        "count": "[if(equals(parameters('blobServices_containerDeleteRetentionPolicy'),'off'), 0, 1)]",
                        "input": {
                            "enabled": "[if(equals(parameters('blobServices_containerDeleteRetentionPolicy'),'true'), 'true', 'false')]",
                            "days": "[parameters('blobServices_containerRetention_days')]"
                        }
                    },
                    {
                        "name": "isVersioningEnabled",
                        "count": "[if(equals(parameters('blobServices_isVersioningEnabled'),'off'), 0, 1)]",
                        "input": {
                            "enabled": "[if(equals(parameters('blobServices_isVersioningEnabled'),'true'), 'true', 'false')]"
                        }
                    }
                ],
                "cors": {
                    "corsRules": []
                },
                "deleteRetentionPolicy": {
                    "allowPermanentDelete": false,
                    "enabled": "[if(equals(parameters('blobServices_deleteRetentionPolicy'), 'true'), 'true', 'false')]",
                    "days": "[parameters('blobServices_retention_days')]"
                }
            }
        },
        {
            "condition": "[parameters('deploy_rg')]",
            "type": "Microsoft.Storage/storageAccounts/fileServices",
            "apiVersion": "2022-05-01",
            "name": "[variables('storageAccount_default_name')]",
            "location": "[parameters('region')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount_name'))]"
            ],
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "properties": {
                "protocolSettings": {
                    "smb": {}
                },
                "cors": {
                    "corsRules": []
                },
                "shareDeleteRetentionPolicy": {
                    "enabled": "[if(equals(parameters('fileServices_retention'),'true'), 'true', 'false')]",
                    "days": "[parameters('fileServices_retentionDays')]" //changed from 0
                }
            }
        },
        {
            "condition": "[parameters('deploy_rg')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2022-05-01",
            "name": "[variables('storageAccount_name')]",
            "location": "[parameters('region')]",
            "tags": {
                "agency_name": "[parameters('agency')]",
                "agency_ori": "ca0370000",
                "application_name": "[parameters('application')]",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "[parameters('environment')]",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "StorageV2",
            "properties": {
                "publicNetworkAccess": "Enabled",
                "minimumTlsVersion": "TLS1_2",
                "allowBlobPublicAccess": true,
                "allowSharedKeyAccess": true,
                "networkAcls": {
                    "resourceAccessRules": [],
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [
                        // {
                        //     "condition": "[equals(parameters('DeployNetworkResources'),'true')]",
                        //     "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_name'))]",
                        //     "action": "Allow",
                        //     "state": "Succeeded"
                        // }
                    ],
                    // "copy": [
                    //     {
                    //         "name": "virtualNetworkRules",
                    //         "count": "[if(equals(parameters('DeployNetworkResources'),'false'), 0, 1)]",
                    //         "input": {
                    //             "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_name'))]", //"[concat(parameters('virtualNetwork_externalid'), '/subnets/snet-sdsd-it-ccw-dev-fl-001')]",
                    //             "action": "Allow",
                    //             "state": "Succeeded"
                    //         }
                    //     }
                    // ],
                    "ipRules": [],
                    "defaultAction": "Deny"
                },
                "supportsHttpsTrafficOnly": true,
                "encryption": {
                    "requireInfrastructureEncryption": false,
                    "services": {
                        "file": {
                            "keyType": "Account",
                            "enabled": true
                        },
                        "blob": {
                            "keyType": "Account",
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                },
                "accessTier": "Hot"
            }
        },
        {
            "type": "Microsoft.Cdn/profiles",
            "apiVersion": "2021-06-01",
            "name": "[parameters('profiles_sdfasdfasdfsadfsadfasdfa_name')]",
            "location": "Global",
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "sku": {
                "name": "Standard_Microsoft"
            },
            "kind": "cdn",
            "properties": {}
        },
        {
            "type": "Microsoft.Cdn/profiles/endpoints",
            "apiVersion": "2021-06-01",
            "name": "[concat(parameters('profiles_sdfasdfasdfsadfsadfasdfa_name'), '/asdas-admin2-ccw-dev-002-sdsd-cdn-ep')]",
            "location": "Global",
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "originHostHeader": "sasdsditccwdevaui002.z2.web.core.usgovcloudapi.net",
                "contentTypesToCompress": [
                    "application/eot",
                    "application/font",
                    "application/font-sfnt",
                    "application/javascript",
                    "application/json",
                    "application/opentype",
                    "application/otf",
                    "application/pkcs7-mime",
                    "application/truetype",
                    "application/ttf",
                    "application/vnd.ms-fontobject",
                    "application/xhtml+xml",
                    "application/xml",
                    "application/xml+rss",
                    "application/x-font-opentype",
                    "application/x-font-truetype",
                    "application/x-font-ttf",
                    "application/x-httpd-cgi",
                    "application/x-javascript",
                    "application/x-mpegurl",
                    "application/x-opentype",
                    "application/x-otf",
                    "application/x-perl",
                    "application/x-ttf",
                    "font/eot",
                    "font/ttf",
                    "font/otf",
                    "font/opentype",
                    "image/svg+xml",
                    "text/css",
                    "text/csv",
                    "text/html",
                    "text/javascript",
                    "text/js",
                    "text/plain",
                    "text/richtext",
                    "text/tab-separated-values",
                    "text/xml",
                    "text/x-script",
                    "text/x-component",
                    "text/x-java-source"
                ],
                "isCompressionEnabled": true,
                "isHttpAllowed": true,
                "isHttpsAllowed": true,
                "queryStringCachingBehavior": "IgnoreQueryString",
                "optimizationType": "GeneralWebDelivery",
                "origins": [
                    {
                        "name": "sasdsditccwdevaui002-z2-web-core-usgovcloudapi-net",
                        "properties": {
                            "hostName": "sasdsditccwdevaui002.z2.web.core.usgovcloudapi.net",
                            "originHostHeader": "sasdsditccwdevaui002.z2.web.core.usgovcloudapi.net",
                            "priority": 1,
                            "weight": 1000,
                            "enabled": true
                        }
                    }
                ],
                "originGroups": [],
                "geoFilters": []
            }
        },
        {
            "type": "Microsoft.Cdn/profiles/endpoints/customdomains",
            "apiVersion": "2021-06-01",
            "name": "[concat(parameters('profiles_sdfasdfasdfsadfsadfasdfa_name'), '/asdas-admin2-ccw-dev-002-sdsd-cdn-ep/admin2-ccw-dev2-sdsd-cssa-cloud')]",
            "dependsOn": [
                "[resourceId('Microsoft.Cdn/profiles/endpoints', parameters('profiles_sdfasdfasdfsadfsadfasdfa_name'), 'asdas-admin2-ccw-dev-002-sdsd-cdn-ep')]"
            ],
            "properties": {
                "hostName": "admin2-ccw-dev2-sdsd.cssa.cloud"
            }
        },
        {
            "type": "Microsoft.Cdn/profiles/endpoints/origins",
            "apiVersion": "2021-06-01",
            "name": "[concat(parameters('profiles_sdfasdfasdfsadfsadfasdfa_name'), '/asdas-admin-ccw-dev-002-sdsd-cdn-ep/origin-0')]",
            "dependsOn": [
                "[resourceId('Microsoft.Cdn/profiles/endpoints', parameters('profiles_sdfasdfasdfsadfsadfasdfa_name'), 'asdas-admin-ccw-dev-002-sdsd-cdn-ep')]"
            ],
            "properties": {
                "hostName": "sasdsditccwdevaui002.z2.web.core.usgovcloudapi.net",
                "httpPort": 80,
                "httpsPort": 443,
                "originHostHeader": "sasdsditccwdevaui002.z2.web.core.usgovcloudapi.net",
                "priority": 1,
                "weight": 1000,
                "enabled": true
            }
        },
        {
            "type": "Microsoft.Network/privateDnsZones",
            "apiVersion": "2018-09-01",
            "name": "[parameters('privateDnsZones_privatelink_azconfig_azure_us_name')]",
            "location": "global",
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "maxNumberOfRecordSets": 25000,
                "maxNumberOfVirtualNetworkLinks": 1000,
                "maxNumberOfVirtualNetworkLinksWithRegistration": 100,
                "numberOfRecordSets": 2,
                "numberOfVirtualNetworkLinks": 0,
                "numberOfVirtualNetworkLinksWithRegistration": 0,
                "provisioningState": "Succeeded"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "name": "[parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name')]",
            "location": "usgovarizona",
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "192.168.0.0/26"
                    ]
                },
                "subnets": [
                    {
                        "name": "snet-sdsd-it-ccw-dev-ag-002",
                        "properties": {
                            "addressPrefix": "192.168.0.0/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_ag_002_externalid')]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-kv-002",
                        "properties": {
                            "addressPrefix": "192.168.0.8/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_kv_002_externalid')]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.KeyVault",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-db-002",
                        "properties": {
                            "addressPrefix": "192.168.0.16/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_db_002_externalid')]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.AzureCosmosDB",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-ac-002",
                        "properties": {
                            "addressPrefix": "192.168.0.32/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_ac_002_externalid')]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-ct-002",
                        "properties": {
                            "addressPrefix": "192.168.0.40/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_ct_002_externalid')]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-fl-002",
                        "properties": {
                            "addressPrefix": "192.168.0.48/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_fl_002_externalid')]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "usgovarizona",
                                        "usgovtexas"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-func-002",
                        "properties": {
                            "addressPrefix": "192.168.0.56/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_func_002_externalid')]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Web",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "snet-sdsd-it-ccw-dev-wa-002",
                        "properties": {
                            "addressPrefix": "192.168.0.24/29",
                            "networkSecurityGroup": {
                                "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_wa_002_externalid')]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Disabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [
                    {
                        "name": "[parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name')]",
                        "properties": {
                            "peeringState": "Connected",
                            "remoteVirtualNetwork": {
                                "id": "[parameters('virtualNetworks_vnet_sdsd_it_dev_001_externalid')]"
                            },
                            "allowVirtualNetworkAccess": true,
                            "allowForwardedTraffic": true,
                            "allowGatewayTransit": false,
                            "useRemoteGateways": false,
                            "remoteAddressSpace": {
                                "addressPrefixes": [
                                    "172.16.20.0/23"
                                ]
                            }
                        }
                    }
                ],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkInterfaces_pe_sdsd_ccw_dev_sa_nsg_fl_001_nic_be0e1441_7ef5_4eeb_96c4_25f8d43291de_name')]",
            "location": "usgovarizona",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'), 'snet-sdsd-it-ccw-dev-fl-002')]"
            ],
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "privateEndpointIpConfig.01bf1644-cd94-4bcb-99e3-aa93644b799b",
                        "properties": {
                            "privateIPAddress": "192.168.0.53",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'), 'snet-sdsd-it-ccw-dev-fl-002')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false
            }
        },
        {
            "type": "Microsoft.Network/privateDnsZones/A",
            "apiVersion": "2018-09-01",
            "name": "[concat(parameters('privateDnsZones_privatelink_azconfig_azure_us_name'), '/ac-sdsd-it-ccw-dev-002')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_privatelink_azconfig_azure_us_name'))]"
            ],
            "properties": {
                "ttl": 3600,
                "aRecords": [
                    {
                        "ipv4Address": "192.168.0.36"
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/privateEndpoints",
            "apiVersion": "2020-11-01",
            "name": "[parameters('privateEndpoints_pe_sdsd_ccw_dev_sa_nsg_fl_001_name')]",
            "location": "usgovarizona",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'), 'snet-sdsd-it-ccw-dev-fl-002')]"
            ],
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "privateLinkServiceConnections": [
                    {
                        "name": "[parameters('privateEndpoints_pe_sdsd_ccw_dev_sa_nsg_fl_001_name')]",
                        "properties": {
                            "privateLinkServiceId": "[parameters('storageAccounts_sasdsdccwdevnsgfl002_externalid')]",
                            "groupIds": [
                                "blob"
                            ],
                            "privateLinkServiceConnectionState": {
                                "status": "Approved",
                                "description": "Auto-Approved",
                                "actionsRequired": "None"
                            }
                        }
                    }
                ],
                "manualPrivateLinkServiceConnections": [],
                "subnet": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'), 'snet-sdsd-it-ccw-dev-fl-002')]"
                },
                "customDnsConfigs": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'), '/snet-sdsd-it-ccw-dev-ac-002')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'))]"
            ],
            "properties": {
                "addressPrefix": "192.168.0.32/29",
                "networkSecurityGroup": {
                    "id": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_ac_002_externalid')]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'), '/', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'))]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'))]"
            ],
            "properties": {
                "peeringState": "Connected",
                "remoteVirtualNetwork": {
                    "id": "[parameters('virtualNetworks_vnet_sdsd_it_dev_001_externalid')]"
                },
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": true,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteAddressSpace": {
                    "addressPrefixes": [
                        "172.16.20.0/23"
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
            "apiVersion": "2018-09-01",
            "name": "[concat(parameters('privateDnsZones_privatelink_azconfig_azure_us_name'), '/rvmieiiilju7m')]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_privatelink_azconfig_azure_us_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'))]"
            ],
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "registrationEnabled": false,
                "virtualNetwork": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet_sdsd_it_ccw_dev_002_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('privateEndpoints_pe_sdsd_ccw_dev_sa_nsg_fl_001_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/privateEndpoints', parameters('privateEndpoints_pe_sdsd_ccw_dev_sa_nsg_fl_001_name'))]",
                "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_privatelink_blob_core_usgovcloudapi_net_name'))]"
            ],
            "properties": {
                "privateDnsZoneConfigs": [
                    {
                        "name": "privatelink-blob-core-usgovcloudapi-net",
                        "properties": {
                            "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_privatelink_blob_core_usgovcloudapi_net_name'))]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkSecurityGroups_nsg_sdsd_it_ccw_ag_002_name')]",
            "location": "usgovarizona",
            "tags": {
                "agency_name": "sdsd",
                "agency_ori": "ca0370000",
                "application_name": "ccw",
                "business_unit": "it",
                "criticality": "low",
                "data_classification": "general",
                "environment": "dev",
                "owner_name": "jkellash@californiasheriffs.onmicrosoft.com",
                "start_date": "09/29/2022"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowInternetToAppGatewayWAF",
                        "properties": {
                            "description": "Allows internet traffic for the Application Gateway WAF management",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "65200-65535",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternet80InboundVirtualNetwork",
                        "properties": {
                            "description": "Allow Internet on port 80 Inbound to the Virtual Network",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternet443InboundVirtualNetwork",
                        "properties": {
                            "description": "Allow Internet on port 443 Inbound to the Virtual Network",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_nsg_sdsd_it_ccw_wa_002_name'), '/Allow-GatewayManager-80-443-VirtualNetwork')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_sdsd_it_ccw_wa_002_name'))]"
            ],
            "properties": {
                "description": "Allow traffic from Gateway Manager on ports 80 + 443 to Virtual Network",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "GatewayManager",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [
                    "80",
                    "443"
                ],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        }
    ],
    "outputs": {
        "resourcegroup_name": {
            "condition": "[parameters('deploy_rg')]",
            "type": "string",
            "value": "[parameters('rg_name')]"
        }
    }
}
